[package]
name = "tracing-betterstack"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A tracing subscriber that logs to betterstack (logtail)"
repository = "https://github.com/rishi8094/tracing-betterstack"
homepage = "https://github.com/rishi8094/tracing-betterstack"
readme = "README.md"

[dependencies]
chrono = "0.4.39"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[dev-dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
