[package]
name = "tracing-betterstack"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A tracing subscriber that logs to betterstack (logtail)"
repository = "https://github.com/rishi8094/tracing-betterstack"
homepage = "https://github.com/rishi8094/tracing-betterstack"
readme = "README.md"

[dependencies]
chrono = "0.4"
flume = "0.11"
reqwest = "0.12"
seahash = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
dotenv = "0.15"
futures = "0.3"
